--- a/css/common.css
+++ b/css/common.css
@@ -2,6 +2,8 @@
 .loading {
     width: 200px;
     height: 200px;
+    width: 25vw;
+    height: 25vw;
     vertical-align: middle;
     margin: 0 auto;
     text-align: center;
