--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,4 +1,3 @@
-
 .loading {
     width: 200px;
     height: 200px;
@@ -9,6 +8,15 @@
     text-align: center;
     background-size: cover;
 }
+
 .loading-ring {
     background-image: url('../img/icon/loading_ring.svg')
+}
+
+@media print {
+    .no-print,
+    header,
+    footer {
+        display: none!important;
+    }
 }
